k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app
  labels:
    app: my-node-app
spec:
  ports:
  - port: 3002
    targetPort: 3001
    protocol: TCP
  selector:
    app: my-node-app
  type: ClusterIP
