k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nodeapp.cloudwithus.xyz
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-node-app
            port:
              number: 3002
